--- a/gcweb-proposals/dl-list.html
+++ b/gcweb-proposals/dl-list.html
@@ -39,6 +39,16 @@ dl.dl-horizontal.max-content dd {
 }
 	dl.dl-horizontal.gc-dt dt {width: 200px;}	
 
+
+ .dl-horizontal.v13_5 dt {
+    float: left;
+    width: 160px;
+    clear: left;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .dl-horizontal.v13_5 dt {
     border-top: 1px solid #ccc;
     -webkit-hyphens: auto;
@@ -48,16 +58,7 @@ dl.dl-horizontal.max-content dd {
     text-align: left;
     white-space: normal;
     word-break: break-word;
-}
- .dl-horizontal.v13_5 dt {
-    float: left;
-    width: 160px;
-    clear: left;
-    text-align: right;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-} 
+}	
 }
 .take2 {
     display: grid;
@@ -122,7 +123,7 @@ dl.grid-container dt, dl.grid-container dd {
 	<p>word wraps, sometimes adds hyphen, sometimes not, max wraps at 160px</p>
 
   <h3>Hyphen added in this example</h3>
-<dl class="dl-horizontal">
+<dl class="dl-horizontal v13_5">
 <dt>Description title</dt>
 <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
 <dt>Long word: incomprehensibilities</dt>
