--- a/gcweb-proposals/dl-list.html
+++ b/gcweb-proposals/dl-list.html
@@ -155,7 +155,7 @@ dl.grid-container dt, dl.grid-container dd {
   </dl>
 	<h2>DL horizontal with custom gc-dt class (or can simply default in GCWeb going forward)</h2>	
 	<p>This extends the width of the <code>&lt;dt&gt;</code> element to 200px to take into account the larger GCWeb font size.</p>
-	
+<h3>Prev GCWeb v13.5.0</h3>	
   <dl class="dl-horizontal gc-dt">
     <dt>Term one</dt>
     <dd>Term one informaton here</dd>
@@ -164,11 +164,23 @@ dl.grid-container dt, dl.grid-container dd {
     <dt>Terminologyismistism three</dt>
     <dd>Terminologyismistism  three information here</dd>
   </dl>
+<h3>As of GCWeb v13.5.0</h3>
+	<p>The issue is still when a word is long enough, no hyphen will appear and the word may look like two words</p>
+  <dl class="dl-horizontal gc-dt v13_5">
+    <dt>Term one</dt>
+    <dd>Term one informaton here</dd>
+    <dt>Terminologyismist two</dt>
+    <dd>Terminology two information here</dd>
+    <dt>Terminologyismistism three</dt>
+    <dd>Terminologyismistism  three information here</dd>
+  </dl>
+	
 <h2>Possible custom sizing of definition term width</h2>
 	<p>Debate on if <code>col-*</code> should be used to provide custom grid sizes.</p> 
   
   <p>The risks are that the class is for setting grids and not really for width design, and risks that description lists could be too customized and not look consistant.</p>
 	<p>No current design, further discussion needed.</p>
+</main>
  <div id="def-footer"> </div>
 <!-- Write closure template --> 
 <script type="text/javascript">
