--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -171,8 +171,8 @@
                                        <h3 class="mrgn-tp-sm text-muted h4">Use when</h3>
                                        <ul class="fa-ul">
                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for regular employment income or was made with regular pay for one of the common or uncommon pay periods for which tables are provided</li>
-                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> You received Form TD1-IN (in addition to the TD1) from your employee: <strong>only use these tables on the portion of their income which is taxable</strong>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a> </p>
+                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> If the payment is made to a <a href="/cra-arc/payroll/calculate/payment/indianact.html">First Nations worker </a> and you received Form TD1-IN, <strong>only</strong> use these tables on the <strong>portion</strong> of their income which is <strong>taxable</strong>. 
+<p>If you elected to cover the CPP contributions for the tax-exempt income of your First Nations employees <strong>(Form CPT124)</strong>, include <strong>all</strong> of their income after the effective date you provided in making the election.</p>
 </li>
                                        </ul>
                                     </div>
