--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -160,16 +160,15 @@
                              
                               <div id="ajax-table">
                                  <div class="row">
-                                    <div class="col-md-5">
+                                    <div>
                                        <h3 class="mrgn-tp-sm text-muted h4">Use when</h3>
                                        <ul class="fa-ul">
                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for regular employment income or was made with regular pay for one of the common or uncommon pay periods for which tables are provided</li>
-                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> If the payment is made to a <a href="/cra-arc/payroll/calculate/payment/indianact.html">First Nations worker </a> and you received Form TD1-IN, <strong>only</strong> use these tables on the <strong>portion</strong> of their income which is <strong>taxable</strong>. 
-<p>If you elected to cover the CPP contributions for the tax-exempt income of your First Nations employees <strong>(Form CPT124)</strong>, include <strong>all</strong> of their income after the effective date you provided in making the election.</p>
+                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> If the payment is made to a <a href="/cra-arc/payroll/calculate/payment/indianact.html">First Nations worker</a> and you received Form TD1-IN, <strong>only</strong> use these tables on the <strong>portion</strong> of their income which is <strong>taxable</strong> 
 </li>
                                        </ul>
                                     </div>
-                                    <div class="col-md-7">
+                                    <div>
                                        <h3 class="mrgn-tp-sm text-muted h4">Do not use when</h3>
                                        <ul class="fa-ul">
 					  <li><span class="fas fa-times text-danger fa-li fa-lg"></span>The payment is for regular payments at irregular intervals (not paid regularly), use: <a href="#tab-reg2">Regular payments at irregular intervals</a>  </li>     
