--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -160,7 +160,7 @@
                              
                               <div id="ajax-table">
                                  <div class="row">
-                                    <div>
+                                    <div class="col-md-5">
                                        <h3 class="mrgn-tp-sm text-muted h4">Use when</h3>
                                        <ul class="fa-ul">
                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for regular employment income or was made with regular pay for one of the common or uncommon pay periods for which tables are provided</li>
@@ -168,7 +168,7 @@
 </li>
                                        </ul>
                                     </div>
-                                    <div>
+                                    <div class="col-md-7">
                                        <h3 class="mrgn-tp-sm text-muted h4">Do not use when</h3>
                                        <ul class="fa-ul">
 					  <li><span class="fas fa-times text-danger fa-li fa-lg"></span>The payment is for regular payments at irregular intervals (not paid regularly), use: <a href="#tab-reg2">Regular payments at irregular intervals</a>  </li>     
