--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -285,7 +285,7 @@
 
 </div>
 <p>Generally, if a low-interest or interest-free loan is provided or a debt is incurred because of employment or shareholdings, the <strong>interest</strong> benefit is taxable. Depending on your situation, the interest benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>
-<p>Forgiven loans you provide to your employees are <strong>always</strong> taxable.</p>
+<p>Forgiven loans you provide to your employees or a shareholder are <strong>always</strong> taxable.</p>
 	
 <h2 class="h3">On this page</h2>
   	
