--- a/jmlt333/taxes.html
+++ b/jmlt333/taxes.html
@@ -375,7 +375,7 @@ Taxes</h1>
                     <div class="col-md-4 col-sm-6 mrgn-lft-0">
                         <div class="well eqht-trgt"><a href="/en/revenue-agency/campaigns/every-dollar-counts.html" data-gc-analytics="promo:promotionalfeature">
                                 <figure>
-                                    <div> <img src="/content/dam/cra-arc/camp-promo/features/ft-20230117-360x203-1-en.jpg" alt="Lady holding a baby" class="img-responsive thumbnail mrgn-bttm-sm"> </div>
+                                    <div> <img src="https://canada.ca/content/dam/cra-arc/camp-promo/features/ft-20230117-360x203-1-en.jpg" alt="Lady holding a baby" class="img-responsive thumbnail mrgn-bttm-sm"> </div>
                                     <figcaption>Canada child benefit</figcaption>
                                     <p>Get up to $7,437 per child under 6 with the Canada child benefit. Find out if you qualify.</p>
                                 </figure>
