--- a/jmlt333/taxes.html
+++ b/jmlt333/taxes.html
@@ -350,7 +350,7 @@ Taxes</h1>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="/en/services/taxes/excise-taxes-duties-and-levies.html">Excise and specialty taxes</a></h3>
-                    <p>Customs, excise taxes and duties, air travellers security charge, fuel charge, luxury, underused housing and other taxes</p>
+                    <p>Underused Housing Tax, Air Travellers Security Charge, Luxury Tax, Fuel charge, customs tariff, excise duties and taxes</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="/en/services/taxes/charities.html">Charities and giving</a></h3>
