--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -442,7 +442,7 @@
 <p>Learn more on how to calculate: <a href="/cra-arc/payroll/calculate/how/tax.html#fees-non">Calculate income tax deductions</a> and how to report: <a href="/cra-arc/payroll/file/t4anrslip.html">T4A-NR slip - Payments to non-residents for services provided in Canada</a> </p>              
  </details> 
 
-<details><summary>Amounts paid or credited to Canadian resident subcontractor whose primary source of business income is more than 50% from construction activities in respect of goods or services rendered in the course of <strong>construction services</strong> for the reporting period performed inside or outside Canada</summary>
+<details><summary>Canadian resident subcontractor recipients of amounts paid or credited to whose primary source of business income is more than 50% from construction activities in respect of goods or services rendered in the course of  <strong>construction services</strong> for the reporting period performed inside or outside Canada</summary>
    
                       <ul class="fa-ul mrgn-bttm-lg">
                         <li id="h_cons"><span class="fas fa-times text-danger fa-lg fa-li"></span> Do not withhold CPP, EI or income tax deductions</li>
