--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -450,7 +450,7 @@
 			<li><span class="fas fa-check fa-li fa-lg text-success"></span> Include GST/HST and PST (where applicable) in the amount reported in box 22</li>
                     
 		 </ul>
-<p>Under the CRA administrative policy, a slip <strong>must</strong> be issued if the <strong>total annual service component</strong>strong> of the <strong>mixed</strong> services and goods payments in the reporting period was <strong>more than $500</strong> (do not include GST/HST) per subcontractor. </p>
+<p>Under the CRA administrative policy, a slip <strong>must</strong> be issued if the <strong>total annual service component</strong> of the <strong>mixed</strong> services and goods payments in the reporting period was <strong>more than $500</strong> (do not include GST/HST) per subcontractor. </p>
 
 <p>You <strong>do not</strong> have to issue a slip if the payment is related to <strong>only</strong> the provision of goods.</p>
 
