--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -497,7 +497,7 @@
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-154.html#docCont">ITA: 162(7)</a></dt> <dd>Information returns late filing penalty – Minimum penalty of $100</dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-155.html#docCont">ITA: 163(1)</a></dt> <dd>Repeated failure to report income</dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-155.html#docCont">ITA: 163(2)</a></dt> <dd>False statements or omissions</dd>
-<dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-155.html#docCont">ITA: 163.2(1)</a></dt> <dd>Misrepresentation of a Tax Matter by a Third Party</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-155.html#docCont">ITA: 163.2(1)</a></dt> <dd>Misrepresentation of a tax matter by a third party</dd>
 
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-1.html#h-583618:~:text=Deductions%20and%20Remittances-,101%C2%A0,-Every%20person%20who">ITR: 101</a></dt> <dd>Deductions and remittances</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-3.html#h-583833">ITR: 105(1)</a></dt> <dd>Non-resident - Fees, commissions or other amounts in respect of services rendered in Canada </dd>
@@ -505,8 +505,8 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#docCont:~:text=Date%20Returns%20To%20Be%20Filed">ITR: 205(3)</a></dt> <dd>Filing – Prescribed information returns for purposes of 162(7.01)</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#docCont:~:text=Previous%20Version-,Electronic%20Filing,-205.1%C2%A0(1">ITR: 205.1(1)</a></dt> <dd>Electronic filing requirement</dd>
 
-<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-8.html#docCont"> ITR: 237</a></dt> <dd>Contract for Goods and Services</dd>
-<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-8.html#docCont"> ITR: 238</a></dt> <dd>Reporting of Payments in Respect of Construction Activities</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-8.html#docCont"> ITR: 237</a></dt> <dd>Contract for goods and services</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-8.html#docCont"> ITR: 238</a></dt> <dd>Reporting of payments in respect of construction activities</dd>
 	
 </dl>
 </div>
