--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -551,26 +551,10 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<details><summary>Examples where exempt </summary>
-<h4>Example 1</h4>
-<p>Mr. A lives off a reserve and works as a mechanic for an automobile repair shop, performing his duties in a garage located on a reserve. </p>
-<p>All the employment income he receives from this employer is exempt because the duties are performed on a reserve.</p>
-<h4>Example 2</h4>
-<p>Mr. B lives off a reserve and works as a driver for a heating-oil supplier, performing almost all of his duties making deliveries to houses on a reserve. </p>
-<p>All the employment income he receives from this employer is exempt because more than 90% of the duties are performed on a reserve.</p>
-<h4>Example 3</h4>
-<p>Ms. C lives off a reserve and works in an office on a reserve. Her duties include a daily drive into a nearby town where she does the banking for the business and picks up the mail and supplies for the business. </p>
-<p>All the employment income she receives from this employer is exempt, although she incidentally leaves the reserve in the course of carrying out her duties.</p>
-</details>
-<details><summary>Example where not exempt</summary>
-<p>Mr. D works for a logging company that is not resident on a reserve, cutting trees under license on provincial Crown land. </p>
-<p>All the employment income he receives from this employer is taxable because the land does not form part of a reserve. </p>
-<p>Mr. D lives on a reserve, but this factor alone is not sufficient to connect the income to a location on a reserve.</p>
-</details>
+<p> <a href="#ajax-example1a" aria-controls="centred-popup" class="wb-lbx" role="button">Guideline 1 - Examples where exempt <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1b" aria-controls="centred-popup" class="wb-lbx" role="button">Guideline 1 - Example where not exempt <span class="far fa-question-circle"></span></a> </p>
 
-<p>Learn more on how to report amounts on a T4 slip when you pay tax-exempt or partly tax-exempt employment income to your employee: <a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </p>
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#1">Guideline 1</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 </details>
 
 <details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve</summary>
@@ -727,6 +711,17 @@
     <li class="next"><a href="../how/index.html" rel="next"><span class="wb-inv">Next: </span>How to calculate</a></li>
   </ul>
 </nav>
+
+
+	<section id="ajax-example1a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where exempt</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/first-nations-pop.txt#example1a"></div>
+	</div></section>
+
+	<section id="ajax-example1b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where not exempt</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/first-nations-pop.txt#example1b"></div>
+	</div></section>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
