--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -551,8 +551,8 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p> <a href="#ajax-example1a" aria-controls="centred-popup" class="wb-lbx" role="button">Guideline 1 - Examples where exempt <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1b" aria-controls="centred-popup" class="wb-lbx" role="button">Guideline 1 - Example where not exempt <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 1)<span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where not exempt (guideline 1)<span class="far fa-question-circle"></span></a> </p>
 
 <p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 </details>
@@ -715,12 +715,12 @@
 
 	<section id="ajax-example1a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/first-nations-pop.txt#example1a"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payments/first-nations-pop.txt#example1a"></div>
 	</div></section>
 
 	<section id="ajax-example1b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/first-nations-pop.txt#example1b"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payments/first-nations-pop.txt#example1b"></div>
 	</div></section>
 
             <div id="def-preFooter"></div>
