--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -763,6 +763,11 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payments/first-nations-pop.txt#example4b"></div>
 	</div></section>
 
+<section id="ajax-example-emp-related" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payments/first-nations-pop.txt#example-emp-related"></div>
+	</div></section>
+
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
