--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -551,8 +551,8 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p> <a href="#ajax-example1a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 1)<span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where not exempt (guideline 1)<span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 
 <p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 </details>
