--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -308,26 +308,12 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<details><summary>Examples where exempt</summary>
-<h4>Example 1</h4>
-<p>Mrs. H works for a logging company that is resident on a reserve. Mrs. H lives on a reserve, but performs the duties at lumber camps located off the reserve. The employment income is exempt from income tax because the place where the employee lives and the residence of their employer are factors connecting the income to a reserve.</p>
-<h4>Example 2</h4>
-<p>Mr. I is a construction worker employed by a construction company that is resident on a reserve, to work on building sites that are not located on a reserve. Mr. I lives on a reserve, except for short periods each year when he lives near the construction sites. When away from the reserve, he retains his residence on the reserve where his family lives. Mr. I is exempt from income tax on his employment income because the place where he lives and the residence of his employer are factors connecting his employment income to a reserve.</p>
-</details>
+<p> <a href="#ajax-example2a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example2b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 
-<details><summary>Examples where not exempt</summary>
-<h4>Example 1</h4>
-<p>Ms. J lives on a reserve and works as an accountant at the head office of a bank located off a reserve in a nearby city. The bank maintains a branch on Ms. J's reserve and arranges for her to be paid at that branch. Ms. J's employment income is taxable because the only substantive factor linking her employment income to a reserve is her residence which, without other substantial connecting factors, does not result in exemption. Payment on the reserve is viewed as a connecting factor of relatively little weight.</p>
-<h4>Example 2</h4>
-<p>Mr. K is a construction worker employed by a corporation situated on a reserve. The corporation is an employment agency that makes employees available to work for clients that are not situated on a reserve, on building sites not located on a reserve. Mr. K lives on a reserve. The employment agency had an office on the reserve, but carried out very few of its business activities on the reserve. The guidelines would not apply in this case, and one must therefore do an analysis of the connecting factors. Mr. K's employment income is taxable because the residence of the employer in this case has little weight as a connecting factor. The only other substantive factor connecting Mr. K's employment income to a reserve is his residence, which is not sufficient to bring the employment income within the exemption.</p>
-<h4>Example 3</h4>
-<p>Ms. B lives on a reserve and works as director general on that reserve for their corporation (of which they are a shareholder). Their administrative offices are located on reserve but the work is carried out mostly off the reserve. Ms. B receives a salary from their corporation. This salary is exempt. Ms. B pays themselves a bonus on top of their salary. The bonus is based on the company's performance. The connecting factor of the bonus is not sufficient to bring that income within the exemption.</p>
-</details>
-<p>Learn more on how to report amounts on a T4 slip when you pay tax-exempt or partly tax-exempt employment income to your employee: <a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </p>
+<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#2">Guideline 2</a></p>
 </details>
 
 <details><summary>Situation: Other situations where your employee is required to perform duties on a reserve</summary>
@@ -455,7 +441,8 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p>Learn more on how to report amounts on a T4 slip when you pay tax-exempt or partly tax-exempt employment income to your employee: <a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </p>
+<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
+
 <details><summary>Example where exempt</summary>
 <p>Ms. L lives on a reserve and works as a policewoman for an off-reserve employer. She performs more than one-half of her duties on a reserve, and she has an additional connecting factor in that she lives on the reserve. </p>
 <p>All of her employment income from this employer is exempt in this situation.</p>
@@ -537,7 +524,7 @@
 <p>Ms. T works for an Indian organization dedicated to organizing social programs for off-reserve Indians. The organization is located off a reserve. </p>
 <p>All the employment income of Ms. T from this employer is taxable because there are no factors connecting that income to a location on a reserve.</p>
 </details>	
-<p>Learn more on how to report amounts on a T4 slip when you pay tax-exempt or partly tax-exempt employment income to your employee: <a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </p>
+<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#4">Guideline 4</a></p>
 </details>
