--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -441,17 +441,11 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
+<p> <a href="#ajax-example3a" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example3b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 
-<details><summary>Example where exempt</summary>
-<p>Ms. L lives on a reserve and works as a policewoman for an off-reserve employer. She performs more than one-half of her duties on a reserve, and she has an additional connecting factor in that she lives on the reserve. </p>
-<p>All of her employment income from this employer is exempt in this situation.</p>
-</details>
-<details><summary>Example where not exempt</summary>
-<p>Ms. M lives off reserve in a town where she works in a restaurant owned by a corporation resident on a reserve. Once a week, she drives to the reserve to pick up the pay cheques for the restaurant staff. </p>
-<p>All of her employment income from this employer is taxable because the only factor connecting the income to a reserve is the residence of the employer and, without other connecting factors, this is not sufficient for the exemption to apply.</p>
-</details>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#3">Guideline 3</a></p>
+
+<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 
 </details>
 
@@ -467,20 +461,8 @@
 </li>
 </ul>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
-<details><summary>Examples where exempt</summary>
-<h4>Example 1</h4>
-<p>Mr. E lives off a reserve and works for a government department, mostly at a location off a reserve. As part of his position, he spends one-half day per week on a regular basis working in a clinic on a reserve. </p>
-<p>Since one- tenth of Mr. E's work is performed on a reserve, 10% of Mr. E's income from this employment is exempt. The other 90% of his income is taxable. </p>
-<h4>Example 2</h4>
-<p>Ms. F lives off a reserve and works for a boys and girls club at a location off a reserve. Each summer, Ms. F works for the club at a one-month camp operated on a reserve. </p>
-<p>The income Ms. F earns at the summer camp operated on the reserve is exempt.</p>	
-</details>
-<details><summary>Example where not exempt</summary>
-<p>Mrs. G lives off a reserve and works for a stationery store located off a reserve. On rare occasions, Mrs. G delivers some of the store's goods to customers on a reserve. </p>
-<p>None of her income is exempt. The trips to the reserve are occasional and are not a meaningful connecting factor. All her employment income from this employer is taxable.</p>
-</details>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#1">Guideline 1</a> and <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#pro">Proration rule</a></p>
-
+<p> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1bpro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
 
 <details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
