--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -480,35 +480,10 @@
 </ul>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<details><summary>Examples where exempt</summary>
-<h4>Example 1</h4>
-<p>Mr. N works for the education department of a tribal council at an off-reserve location central to several reserves. Mr. N lives off a reserve and the tribal council is resident on one of the reserves. </p>
-<p>All the employment income of Mr. N from this employer is exempt from income tax because the duties he performs for the tribal council are connected to the reserves served by the council, and the employer is resident on a reserve.</p>
-<h4>Example 2</h4>
-<p>Ms. O is a librarian working for a technical training institute operated by five Indian bands for Indians who live on a reserve. The administrative office of the institute is on a reserve. Ms. O lives off a reserve and works at an off-reserve location central to several reserves. </p>
-<p>All the employment income of Ms. O from this employer is exempt from income tax because the duties she performs for the Indian organization that employs her are connected to the reserves served by the Indian organization, and the employer is resident on a reserve.</p>
-<h4>Example 3</h4>
-<p>Mr. P works for an Indian organization providing child and family related services to members of a large number of bands with reserves scattered over a large area within a province. Some of these services are provided in the provincial capital, where Mr. P works, and the organization's administrative office is at an off-reserve location central to the bands served. However, the organization's directors, consisting of the band chiefs, meet at each reserve in rotation. </p>
-<p>All the employment income of Mr. P from this employer is exempt from income tax because the duties he performs for the Indian organization that employs him are connected to the reserves served by the Indian organization, and the employer is resident on a reserve.</p>
-<h4>Example 4</h4>
-<p>Ms. Q works for a company that is resident on a reserve and owned by a tribal council. The company exists to provide adequate low-cost housing on reserves and the company's property is for the most part on reserves. Ms. Q performs her duties at an off-reserve location central to several reserves. </p>
-<p>All the employment income of Ms. Q from this employer is exempt from income tax because the duties she performs for the Indian organization that employs her are connected to the reserves served by the Indian organization, and the employer is resident on a reserve.</p>
-<h4>Example 5</h4>
-<p>Mr. R works for an Indian organization that manages funds provided by the government to assist in planning for future education needs on reserves. His employer is resident on a reserve, but he works at a location off a reserve. </p>
-<p>All the employment income of Mr. R from this employer is exempt from income tax because the duties he performs for the Indian organization that employs him are connected to the reserves served by the Indian organization, and the employer is resident on a reserve.</p>
-</details>
+<p> <a href="#ajax-example4a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example4b" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 
-<details><summary>Examples where not exempt</summary>
-<h4>Example 1</h4>
-<p>Mr. S works for a commercial building supplies company that is owned by a tribal council and is resident on a reserve. He performs his duties off a reserve and lives off a reserve. </p>
-<p>All the employment income of Mr. S from this employer is taxable because, although there is one factor, the residence of the employer, connecting the income to a reserve, this factor by itself is not sufficient to confer the exemption when the employer and the employee are active in the commercial mainstream of society.</p>
-<h4>Example 2</h4>
-<p>Ms. T works for an Indian organization dedicated to organizing social programs for off-reserve Indians. The organization is located off a reserve. </p>
-<p>All the employment income of Ms. T from this employer is taxable because there are no factors connecting that income to a location on a reserve.</p>
-</details>	
 <p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#4">Guideline 4</a></p>
 </details>
 </li>
 
@@ -626,6 +601,7 @@
 		
 <h3 id="h_7_1">Related</h3>
 <ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">Indian Act exemption for employment income guidelines</a></li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income </li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t90.html">T90</a>, Income Exempt From Tax Under the Indian Act</li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>, Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Ac </li>
