--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -507,20 +507,10 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<details><summary>Examples where partly exempt</summary>
-<h4>Example 1</h4>
-<p>Mr. E lives off a reserve and works for a government department, mostly at a location off a reserve. As part of his position, he spends one-half day per week on a regular basis working in a clinic on a reserve. </p>
-<p>Since one-tenth of Mr. E's work is performed on a reserve, 10% of Mr. E's income from this employment is exempt. The other 90% of his income is taxable. </p>
-<h4>Example 2</h4>
-<p>Ms. F lives off a reserve and works for a boys and girls club at a location off a reserve. Each summer, Ms. F works for the club at a one-month camp operated on a reserve. </p>
-<p>The income Ms. F earns at the summer camp operated on the reserve is exempt.</p>
-</details>
+<p> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1bpro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 
-<details><summary>Example not exempt</summary>
-<p>Mrs. G lives off a reserve and works for a stationery store located off a reserve. On rare occasions, Mrs. G delivers some of the store's goods to customers on reserve. None of her income is exempt. The trips to the reserve are merely occasional and are not a meaningful connecting factor.</p>
-</details>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#1">Guideline 1</a> and <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#pro">Proration rule</a></p>
 </details>
 
 </li></ol>
