--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -650,57 +650,57 @@
 
 	<section id="ajax-example1a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example1a"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1a"></div>
 	</div></section>
 
 	<section id="ajax-example1b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example1b"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1b"></div>
 	</div></section>
 
 <section id="ajax-example1apro" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Proration rule - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example1apro"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1apro"></div>
 	</div></section>
 
 <section id="ajax-example1bpro" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Proration rule - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example1bpro"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1bpro"></div>
 	</div></section>
 
 <section id="ajax-example2a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 2 - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example2a"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example2a"></div>
 	</div></section>
 
 	<section id="ajax-example2b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 2 - Examples where not exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example2b"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example2b"></div>
 	</div></section>
 
 <section id="ajax-example3a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 3 - Example where exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example3a"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example3a"></div>
 	</div></section>
 
 	<section id="ajax-example3b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 3 - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example3b"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example3b"></div>
 	</div></section>
 
 <section id="ajax-example4a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 4 - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example4a"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4a"></div>
 	</div></section>
 
 	<section id="ajax-example4b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 4 - Examples where not exempt</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example4b"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4b"></div>
 	</div></section>
 
 <section id="ajax-example-emp-related" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.txt#example-emp-related"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
 	</div></section>
 
 
