--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Indian Act exemption for employment income guidelines</title>
+         <title>Guidelines for First Nations workers on the tax exemption for employment income</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -36,13 +36,44 @@
          <div id="def-top">
          </div>
          <!-- Write closure template -->
+         <script type="text/javascript">
+            var defTop = document.getElementById("def-top");
+            defTop.outerHTML = wet.builder.top({
+              lngLinks: [{
+                lang: "fr",
+                href: "#",
+                text: "Français"
+              }],
+              breadcrumbs: [{
+                title: "Canada.ca",
+                href: "https://www.canada.ca/en.html"
+              },{
+                title: "Taxes",
+                href: "https://www.canada.ca/en/services/taxes.html"
+              },{
+                title: "Payroll",
+                href: "../../index.html"
+              },{
+                title: "Calculate payroll deductions and contributions",
+                href: "../index.html"
+              },{
+                title: "Determine the tax treatment of payments other than regular employment income",
+                href: "index.html"
+              }
+              ],
+              search: true,
+              siteMenu: true,
+              showPreContent: true
+            });
+         </script>
+
            <main role="main" property="mainContentOfPage" class="container">
 
   <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
           
- <h1 property="name" id="wb-cont" class="gc-thickline">Indian Act exemption for employment income guidelines</h1>
+ <h1 property="name" id="wb-cont" class="gc-thickline">Guidelines for First Nations workers on the tax exemption for employment income</h1>
           
 
         <h2 id="intro">Introduction</h2>
