--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -311,7 +311,10 @@
 
     
         <h2 id="meaning">Meaning of Terms Used</h2> 
-<dl> 
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+
  <dt> 
   <strong>Employer is resident on a reserve</strong> 
  </dt> 
@@ -344,7 +347,8 @@
   <p>"Social, cultural, educational or economic development" includes the provision of social services such as health care or counselling.</p> 
  </dd> 
 </dl>
-    
+   </div>
+</div> 
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
