--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -238,10 +238,10 @@
         <h3 id="4">Guideline 4</h3>
 <div id="guide4">
  <p>When all of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The employer is resident on a reserve</li> 
 <li class="cnjnctn-col">The employer is one of the following: 
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
    <li class="cnjnctn-col">An indian band which has a reserve, or a tribal council representing one or more indian bands which have reserves</li> 
    <li class="cnjnctn-col">An indian organization controlled by one or more such bands or tribal councils, if the organization is dedicated exclusively to the social, cultural, educational, or economic development of indians who for the most part live on reserves</li> 
   </ul> </li> 
