--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1385,7 +1385,7 @@
 <dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> </dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
-          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a></p>
             </details> 
 			</li>
 
@@ -1400,7 +1400,7 @@
 <dt>Fully taxable</dt>
 <dd><strong>Do not</strong> report fully taxable income using code 71, use <a href="#bx_14_cd_71">box 14</a>.</dd>
 </dl>
- <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a></p>
  
             </details> 
 			</li>
@@ -1535,7 +1535,7 @@
 </ul>
 </dd>
 </dl>
-          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a></p>
             </details> 
 			</li>
 
@@ -1562,7 +1562,7 @@
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>Self-employed hairdresser</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>Placement or employment agency worker paid by the agency's client</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-4", "live": true}'>Prescribed salary deferral arrangement </li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>Employee who is registered, or entitled to be registered under the Indian Act</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>Payments to First Nations workers</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-6", "live": true}'>Self-employed person who is registered, or entitled to be registered under the Indian Act</li>
    
       
@@ -1621,18 +1621,18 @@
             </div>
 
 <div id="ajax-5" class="hidden">
-              <h3>Employee who is registered, or entitled to be registered under the Indian Act</h3>
+              <h3>Payments to First Nations workers</h3>
 	<br>
-                <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Employee who is registered, or entitled to be registered under the Indian Act">
-                        <img src="images/T4_Indian_1.JPG" alt="Employee who is registered, or entitled to be registered under the Indian Act" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Payments to First Nations workers">
+                        <img src="images/T4_Indian_1.JPG" alt="Payments to First Nations workers" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-6" class="hidden">
-              <h3>Self-employed person who is registered, or entitled to be registered under the Indian Act</h3>
+              <h3>Self-employed person who is a First Nations worker</h3>
 <br>
-                <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Self-employed person who is registered, or entitled to be registered under the Indian Act">
-                        <img src="images/T4_Indian_2.JPG" alt="Self-employed person who is registered, or entitled to be registered under the Indian Act" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Self-employed person who is a First Nations worker">
+                        <img src="images/T4_Indian_2.JPG" alt="Self-employed person who is a First Nations worker" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 </div>
@@ -1750,8 +1750,8 @@
 <li>Self-employed fishing income </li>
 <li>Placement or employment agency workers </li>
 <li>Salary deferral arrangements </li>
-<li>Indian employees </li>
-<li>Indians who are self-employed </li>
+<li>First Nations employees </li>
+<li>First Nations who are self-employed </li>
 <li>Seasonal Agricultural Workers Program </li>
 <li>Retiring allowances </li>
 <li>Canadian Forces personnel and police officers </li>
