--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -406,7 +406,7 @@
 <td>Payee and their dependent children</td>
 </tr></tbody></table>
    </div>
-
+ <p><strong>Do not</strong> use box 014 before January 2024 if you are filing electronically. </p>
 <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
