--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -517,12 +517,13 @@
 
 </li>
 <li>
-<h3 id="h_5">Withhold and report the payment on the slip</h3>
+<h3 id="h_5">Withhold payroll deductions and remit the GST/HST</h3>
 <p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
 <p>You must withhold the deductions and report on a slip depending on the <strong>type of worker</strong>:</p>
 
 <details><summary>Worker is an employee</summary>
+<p>You must withhold the following deductions:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">
     <h3 id="partex" class="mrgn-tp-sm text-muted h4">Salary, wages and taxable benefits in cash<span class="wb-inv">: Option 1</span></h3>
@@ -556,16 +557,55 @@
   </li>
  
 </ul>
+
 <p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> election - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
 <p>If the employer chooses not to apply for coverage, an <strong>Indian </strong>can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
-<p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more on how to <strong>calculate deductions</strong> and the <strong>GST/HST to remit</strong> on benefits: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
 
+</details>
+
+<details><summary>Worker is not your employee</summary>
+<p>You must withhold the deductions and report on a <strong>T4A slip</strong>:</p>
+
+<p>Add info here</p>
 </details>
 
 <details><summary>Worker is self-employed</summary>
 <p>Add info here</p>
 </details>
 
+<p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
+
+</li>
+
+<li><h3 id="h_6">Report the payment on a slip</h3>
+<p><strong>You must report the following on a slip<strong>: </strong></p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+  <li class="cnjnctn-col">
+    <h3 class="mrgn-tp-sm text-muted h4">T4 - Employee<span class="wb-inv">: Option 1</span></h3>
+	<p>Report on: </p>
+        <ul class="fa-ul">
+                       <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
+                        <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings</li>
+             
+                         <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings</li>
+                         <li><span class="fas fa-check fa-li text-success"></span>Code XX - Exempt portion only</li>
+
+		<li><span class="fas fa-check fa-li text-success"></span>Code 40 - Other Information </li>
+                     </ul>
+  </li>
+  <li class="cnjnctn-col">
+    <h3 class="mrgn-tp-sm text-muted h4">T4A - Person or partnership that was a shareholder<span class="wb-inv">: Option 2</span></h3>
+    <p>Report on: </p> <ul class="fa-ul">
+                          <li><span class="fas fa-check fa-li text-success"></span>Code XXX - </li>
+			 <li><span class="fas fa-check fa-li text-success"></span>Code XXX - </li>
+	     <li><span class="fas fa-check fa-li text-success"></span>Code XXX - </li>
+	     <li><span class="fas fa-check fa-li text-success"></span>Code XXX - </li>
+	     <li><span class="fas fa-check fa-li text-success"></span>Code XXX - </li>
+                     </ul>
+  </li>
+</ul>
+	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
+	
 
 </li>
 
