--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -520,7 +520,7 @@
 <h3 id="h_5">Withhold payroll deductions and remit the GST/HST</h3>
 <p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
-<p>You must withhold the deductions and report on a slip depending on the <strong>type of worker</strong>:</p>
+<p>You must withhold and remit the deductions depending on the <strong>type of worker</strong>:</p>
 
 <details><summary>Worker is an employee</summary>
 <p>You must withhold the following deductions:</p>
@@ -578,7 +578,8 @@
 </li>
 
 <li><h3 id="h_6">Report the payment on a slip</h3>
-<p><strong>You must report the following on a slip<strong>: </strong></p>
+<p>You must report the following on a slip:</p>
+<p>You must report the following on a slip depending on the <strong>type of payment</strong>:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
     <h3 class="mrgn-tp-sm text-muted h4">T4 - Employee<span class="wb-inv">: Option 1</span></h3>
