--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -245,6 +245,7 @@
 
     
         <h2 id="meaning">Meaning of terms used</h2> 
+<div id="definitions"> 
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
@@ -254,7 +255,7 @@
  </dt> 
  <dd> 
   <p>"Employer is resident on a reserve" means that the reserve is the place where the central management and control over the employer organization is actually located.</p> 
-  <p><strong>Note</strong> <br>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, it may be that the real management and control of an organization is exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p> 
+  <p>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, it may be that the real management and control of an organization is exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p> 
  </dd> 
  <dt> 
   <strong>Indian</strong> 
@@ -282,7 +283,7 @@
  </dd> 
 </dl>
    </div>
-</div> 
+</div>  </div>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
