--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -245,7 +245,7 @@
 
     
         <h2 id="meaning">Meaning of terms used</h2> 
-<div id="definitions"> 
+ 
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
@@ -254,36 +254,36 @@
   <strong>Employer is resident on a reserve</strong> 
  </dt> 
  <dd> 
-  <p>"Employer is resident on a reserve" means that the reserve is the place where the central management and control over the employer organization is actually located.</p> 
+<div id="def1">  <p>"Employer is resident on a reserve" means that the reserve is the place where the central management and control over the employer organization is actually located.</p> 
   <p>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, it may be that the real management and control of an organization is exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p> 
- </dd> 
+</div> </dd> 
  <dt> 
   <strong>Indian</strong> 
  </dt> 
  <dd> 
-  <p>"Indian" means an Indian as defined for the purposes of the Indian Act.</p> 
+ <div id="def2">  <p>"Indian" means an Indian as defined for the purposes of the Indian Act. </p></div> 
  </dd> 
  <dt> 
   <strong>Indian lives on the reserve</strong> 
  </dt> 
  <dd> 
-  <p>"Indian lives on the reserve" means the Indian lives on the reserve in a domestic establishment that is his or her principal place of residence and that is the centre of his or her daily routine.</p> 
+ <div id="def3">  <p>"Indian lives on the reserve" means the Indian lives on the reserve in a domestic establishment that is his or her principal place of residence and that is the centre of his or her daily routine.</p> </div>
  </dd> 
  <dt> 
   <strong>On a reserve</strong> 
  </dt> 
  <dd> 
-  <p>"On a reserve" means on a reserve as defined for purposes of the Indian Act, including any settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category I-A lands under the Cree-Naskapi" (of Quèbec) Act).</p> 
+ <div id="def4">  <p>"On a reserve" means on a reserve as defined for purposes of the Indian Act, including any settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category I-A lands under the Cree-Naskapi" (of Quèbec) Act).</p> </div>
  </dd> 
  <dt> 
   <strong>Social, cultural, educational or economic development</strong> 
  </dt> 
  <dd> 
-  <p>"Social, cultural, educational or economic development" includes the provision of social services such as health care or counselling.</p> 
+<div id="def5">   <p>"Social, cultural, educational or economic development" includes the provision of social services such as health care or counselling.</p> </div>
  </dd> 
 </dl>
    </div>
-</div>  </div>
+</div>  
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
